data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1352.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7f\01\7f\02\94\80\80\80\00\01\04\74\65\73\74"
    "\0b\66\75\6e\63\5f\69\6d\70\6f\72\74\00\00\03\82"
    "\80\80\80\00\01\00\0a\94\80\80\80\00\01\8e\80\80"
    "\80\00\00\02\7f\03\7f\20\00\0c\02\10\00\0b\0b\0b"
  )
""
)